# lightpoint

./: .clangd  .gitignore  .gitmodules  CMakeLists.txt  README.md  SCOPE.md  USER_GUIDE.md  platformio.ini  sdkconfig.defaults
.github/workflows/: ci.yml  release-fonts.yml  release.yml  release_candidate.yml
.skills/: SKILL.md
docs/: boot-logo.md  epub-toc-navigation.md  file-formats.md  focus-reading.md  hyphenation-trie-format.md  i18n.md  sd-card-fonts.md  translators.md  webserver-endpoints.md  webserver.md
docs/contributing/: architecture.md  getting-started.md  testing-debugging.md
lib/EpdFont/: EpdFont.cpp  EpdFontData.h  EpdFontFamily.h  FontDecompressor.cpp  FontDecompressor.h  SdCardFont.cpp  SdCardFont.h  SdCardFontManager.cpp  SdCardFontManager.h  SdCardFontRegistry.cpp  SdCardFontRegistry.h
lib/Epub/: Epub.cpp  Epub.h
lib/FsHelpers/: FsHelpers.cpp  FsHelpers.h
lib/GfxRenderer/: Bitmap.cpp  Bitmap.h  BitmapHelpers.h  FontCacheManager.cpp  Rect.h  (+3 more)
scripts/: build_html.py  convert_logo.py  debugging_monitor.py  downsize_epub.py  ensure_penv_deps.py  epub_tool.py  find_prs_needing_review.sh  gen_i18n.py  generate-font-manifest.py  generate_hyphenation_trie.py  generate_kerning_ligature_epub.py  generate_spine_toc_edges_epub.py  generate_test_bmps.py  git_branch.py  patch_espidf_ota.py  patch_fatfs_exfat.py  patch_jpegdec.py  patch_pngdec.py  pio_cache_key.py  prepare_logo_source.py  prs.sh  update_hyphenation.sh
src/: BookmarkEntry.h  BookmarkStore.cpp  BookmarkStore.h  CMakeLists.txt  CrossPointSettings.cpp  CrossPointSettings.h  CrossPointState.cpp  CrossPointState.h  FontInstaller.cpp  FontInstaller.h  JsonSettingsIO.cpp  JsonSettingsIO.h  MappedInputManager.cpp  MappedInputManager.h  OpdsServerStore.cpp  OpdsServerStore.h  RecentBooksStore.cpp  RecentBooksStore.h  SdCardFontSystem.cpp  SdCardFontSystem.h  SettingsList.h  SilentRestart.h  WifiCredentialStore.cpp  WifiCredentialStore.h  fontIds.h  main.cpp
src/activities/: Activity.cpp  Activity.h  ActivityManager.cpp  ActivityManager.h  ActivityResult.h  RenderLock.h
src/activities/boot_sleep/: BootActivity.cpp  BootActivity.h  SleepActivity.cpp  SleepActivity.h
src/activities/browser/: OpdsBookBrowserActivity.cpp  OpdsBookBrowserActivity.h
src/activities/home/: CrashActivity.h  FileBrowserActivity.cpp  FileBrowserActivity.h  HomeActivity.cpp  HomeActivity.h  RecentBooksActivity.cpp  RecentBooksActivity.h
src/activities/network/: CalibreConnectActivity.cpp  CrossPointWebServerActivity.cpp  CrossPointWebServerActivity.h  NetworkModeSelectionActivity.h  WifiSelectionActivity.cpp  WifiSelectionActivity.h
src/activities/reader/: EpubReaderActivity.cpp  EpubReaderActivity.h  EpubReaderBookmarksActivity.cpp  EpubReaderBookmarksActivity.h  EpubReaderChapterSelectionActivity.cpp  EpubReaderChapterSelectionActivity.h  EpubReaderFootnotesActivity.h  EpubReaderMenuActivity.cpp  EpubReaderMenuActivity.h  EpubReaderPercentSelectionActivity.cpp  EpubReaderUtils.h  KOReaderSyncActivity.cpp  KOReaderSyncActivity.h  MdReaderActivity.cpp  MdReaderActivity.h  MdReaderMenuActivity.cpp  MdReaderMenuActivity.h  ReaderActivity.cpp  ReaderActivity.h  ReaderLinkPickerActivity.cpp  ReaderLinkPickerActivity.h  ReaderPercentSelectionActivity.cpp  ReaderPercentSelectionActivity.h  ReaderUtils.cpp  ReaderUtils.h  TxtReaderActivity.cpp  TxtReaderActivity.h  XtcReaderActivity.cpp  XtcReaderActivity.h  XtcReaderChapterSelectionActivity.cpp  XtcReaderChapterSelectionActivity.h
src/activities/settings/: ButtonRemapActivity.cpp  ButtonRemapActivity.h  CalibreSettingsActivity.cpp  ClearCacheActivity.cpp  ClearCacheActivity.h  ClockOffsetActivity.cpp  ClockOffsetActivity.h  ClockSyncActivity.cpp  ClockSyncActivity.h  FontDownloadActivity.cpp  FontDownloadActivity.h  FontSelectionActivity.cpp  FontSelectionActivity.h  LanguageSelectActivity.cpp  LanguageSelectActivity.h  OtaUpdateActivity.cpp  SdFirmwareUpdateActivity.cpp  SdFirmwareUpdateActivity.h  SettingsActivity.cpp  SettingsActivity.h  StatusBarSettingsActivity.cpp  StatusBarSettingsActivity.h
src/activities/util/: BmpViewerActivity.cpp  BmpViewerActivity.h  ConfirmationActivity.cpp  ConfirmationActivity.h  FullScreenMessageActivity.h  IntervalSelectionActivity.cpp  IntervalSelectionActivity.h  KeyboardEntryActivity.cpp  KeyboardEntryActivity.h
src/components/: UITheme.cpp  UITheme.h
src/components/icons/: bookmark.h
src/components/themes/: BaseTheme.cpp  BaseTheme.h
src/components/themes/lyra/: Lyra3CoversTheme.cpp  Lyra3CoversTheme.h  LyraTheme.cpp  LyraTheme.h
src/components/themes/roundedraff/: RoundedRaffTheme.cpp  RoundedRaffTheme.h
src/images/: Logo256.h
src/network/: CrossPointWebServer.cpp  CrossPointWebServer.h  FirmwareFlasher.cpp  FirmwareFlasher.h  HttpDownloader.cpp  HttpDownloader.h  OtaUpdater.cpp  OtaUpdater.h  WebDAVHandler.cpp
src/network/html/: FilesPage.html  FontsPage.html  HomePage.html  SettingsPage.html
src/util/: BookCacheUtils.cpp  BookCacheUtils.h  ButtonNavigator.cpp  ButtonNavigator.h  ScreenshotInfo.h  ScreenshotUtil.cpp  ScreenshotUtil.h  UrlUtils.cpp  UrlUtils.h
test/: CMakeLists.txt  README  run_release_json_parser_test.sh  run_streaming_json_parser_test.sh
test/bidi/: BidiUtilsTest.cpp  CMakeLists.txt
test/css_parser/: CMakeLists.txt  CssParserTest.cpp
test/differential_rounding/: CMakeLists.txt  DifferentialRoundingTest.cpp
test/hyphenation_eval/: CMakeLists.txt  HyphenationEvaluationTest.cpp
test/json_writer/: CMakeLists.txt  JsonWriterTest.cpp
test/markdown/: CMakeLists.txt  MarkdownParserTest.cpp  Typesetter.h
test/release_json_parser/: CMakeLists.txt  ReleaseJsonParserTest.cpp
test/section/: CMakeLists.txt  PageStubs.cpp  SectionTest.cpp
test/streaming_json_parser/: CMakeLists.txt  StreamingJsonParserTest.cpp
test/stubs/: CMakeLists.txt  HalPlatform.cpp  HalStorage.cpp  HalStorageTestApi.h  Logging.cpp
test/typesetter/: CMakeLists.txt  GfxRenderer.h  PageStubs.cpp  TypesetterTest.cpp
test/utility/: CMakeLists.txt  FunctionRefTest.cpp  MemoryTest.cpp  SerializationTest.cpp  Utf8Test.cpp
(+258 files in other folders)
